working search box

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         font-style:italic;
         color: white;
         background: black;
-        font-size: 36px;
-        line-height: 36px;
+        font-size: 24px;
+        line-height: 24px;
         box-shadow: 0 0 5px #39E639; 
     }
     
@@ -81,9 +81,7 @@
 
     <div id="vis" style="position:absolute;top:0;left:0;width:100%;height:100%;overflow:hidden;"></div>
     <div id="overlay">
-        <div id="title">El Mapa</div>
-        </br>
-        <div class="info" id="overview"> </div>
+        <div id="title">Senior Destinations 2014</div>
         </br>
         <div class="info" id="students"> 
             <input class="search" />
