--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>el mapa</title>
+    <title>TOHS Senior Destinations 2014</title>
      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700italic,500,300,700' rel='stylesheet' type='text/css'>
     <style type="text/css">
